--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "next-circular-dependency": "^1.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-mapycz": "^1.1.3",
+    "react-firebase-hooks": "^3.0.4",
+    "react-mapycz": "^1.1.5",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@types/react": "17.0.21",
-    "@types/styled-components": "^5.1.14",
+    "@types/styled-components": "^5.1.15",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "typescript": "4.4.3"
