--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^3.0.4",
+    "react-icons": "^4.3.1",
+    "react-imgix": "^9.3.0",
     "react-mapycz": "^1.1.5",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@types/react": "17.0.21",
+    "@types/react-imgix": "^9.2.1",
     "@types/styled-components": "^5.1.15",
     "babel-plugin-styled-components": "^1.13.3",
     "eslint": "7.32.0",
