--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^4.3.1",
     "react-imgix": "^9.3.0",
     "react-mapycz": "^1.1.5",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "17.0.21",
