--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.3.1",
     "react-imgix": "^9.3.0",
     "react-mapycz": "^1.1.5",
+    "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.1",
     "yup": "^0.32.11"
   },
