--- a/package.json
+++ b/package.json
@@ -9,24 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^9.1.0",
+    "firebase": "^9.6.1",
     "formik": "^2.2.9",
     "next": "11.1.2",
     "next-circular-dependency": "^1.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-firebase-hooks": "^3.0.4",
+    "react-firebase-hooks": "^3.0.5",
     "react-icons": "^4.3.1",
     "react-imgix": "^9.3.0",
-    "react-mapycz": "^1.1.5",
+    "react-mapycz": "^1.1.18",
     "react-tooltip": "^4.2.21",
-    "styled-components": "^5.3.1",
+    "reactjs-popup": "^2.0.5",
+    "styled-components": "^5.3.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "17.0.21",
-    "@types/react-imgix": "^9.2.1",
-    "@types/styled-components": "^5.1.15",
+    "@types/react-imgix": "^9.3.1",
+    "@types/styled-components": "^5.1.19",
     "babel-plugin-styled-components": "^1.13.3",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
